# git-release-name

./: Cargo.toml  Dockerfile  LICENSE  README.md
.circleci/: config.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: integration.rs
dictionary/: Cargo.toml
dictionary/src/: adjectives.rs  adverbs.rs  lib.rs  nouns.rs  phrase.rs  sha.rs  sha_part.rs  sha_result.rs
rn-cli/: Cargo.toml  README.md
rn-cli/src/: main.rs
rn-cli/tests/: integration.rs
rn-dictionary/: Cargo.toml
rn-dictionary/src/: lib.rs  phrase.rs  sha_part.rs
rn-web/: Cargo.toml  README.md  Rocket.toml
rn-web/src/: main.rs  param.rs  show.rs
rn_dictionary/src/: case.rs  phrase.rs  sha_part.rs
src/: adjectives.rs  adverbs.rs  main.rs  nouns.rs
src/dictionary/: adjectives.rs  adverbs.rs  case.rs  mod.rs  nouns.rs  phrase.rs  sha_part.rs  sha_result.rs
tests/: integration.rs
web/: Cargo.toml  README.md
web/src/: index.rs  main.rs  param.rs  random.rs  show.rs
