[package]
name = "git-release-name"
version = "0.1.1"
authors = ["Kevin Choubacha <kchoubacha@weedmaps.com>"]
license = "MIT"
description = "A simple library for turning git shas into release names"
repository = "https://github.com/kbacha/git-release-name"
homepage = "http://releasename.com/"
readme = "../README.md"
keywords = ["release", "sha", "random", "funny", "git"]

[dependencies]
Inflector = "0.11"
